# ChurchManager

./: .gitignore  .gitmodules  CMakeLists.txt  build.ps1  version.json
.cache/clangd/index/: Database.cpp.FFE14CD2B153E637.idx  Database.h.3510CC69687B8CD9.idx  Error.cpp.ABC2D07054846866.idx  Error.h.AEF39F536C9B9D9B.idx  ErrorHandler.cpp.7B30FBCFCFF04B19.idx  ErrorHandler.h.410B0588D29A7657.idx  main.cpp.36E44242EA2E3764.idx  main.cpp.47251340BB6EE63D.idx  main.cpp.4F57579B65C37223.idx  main.cpp.67ABBB17A3CA225C.idx  main.cpp.95A2768847617D9B.idx  main.cpp.D6FF736DEA2AF45E.idx  sqlite3.h.0B0B3AF67815C8D7.idx  sqlite3.h.EF5E9B9834E687D7.idx
database/: test.db
databases/: data.db  test.db
docs/: index.html  version.json
headers/: Database.h  Error.h  Person.h
sqlite_test/: main.cpp  test.db
src/: Database.cpp  main.cpp
tests/: CMakeLists.txt
tests/cppReadTest/: Database.cpp  Database.h  Error.cpp  Error.h  ErrorHandler.cpp  ErrorHandler.h  insertAPerson.sql  insertTestPersons.sql  main  main.cpp  tableCreationScript.sql  test.db
tests/excelReading/: main.cpp
tests/pdfTest/: main.cpp
tests/sqlite_test/: main  test.db
tests/updateChecker/: main.cpp
ui/: app-window.slint  globalVariables.slint
